--- a/WebApp/Areas/Admin/Views/DailyList/Detail.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Detail.cshtml
@@ -16,11 +16,8 @@
                         <dd class=".col-md-9 .col-md-push-3">@Html.DisplayFor(model => model.Employee_ID)</dd>
 
 
-                        <dt class=".col-md-3 .col-md-pull-9">@Html.DisplayNameFor(model => model.Room)</dt>
-                        <dd class=".col-md-9 .col-md-push-3">@Html.DisplayFor(model => model.Room)</dd>
-
-                        <dt class=".col-md-3 .col-md-pull-9">@Html.DisplayNameFor(model => model.Customer.Name)</dt>
-                        <dd class=".col-md-9 .col-md-push-3">@Html.DisplayFor(model => model.Customer.Name)</dd>
+                        <dt class=".col-md-3 .col-md-pull-9">@Html.DisplayNameFor(model => model.Room.Name)</dt>
+                        <dd class=".col-md-9 .col-md-push-3">@Html.DisplayFor(model => model.Room.Name)</dd>
 
                         <dt class=".col-md-3 .col-md-pull-9">@Html.DisplayNameFor(model => model.TimeIn)</dt>
                         <dd class=".col-md-9 .col-md-push-3">@Html.DisplayFor(model => model.TimeIn)</dd>
