--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -45,7 +45,7 @@
                         <div class="col-lg-12">
                             <div class="col-md-4">
                                 @*<input type="text" id="txtsearch" class="form-control" placeholder="Nhập vào mã KTV" />*@
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào ID hoặc mã KTV" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
@@ -81,10 +81,10 @@
                             {
                                 <tr id="row_@item.ID">
 
-                                    <th>@item.Employee.Department.Name</th>
+                                    <th>@item.Room.Department.Name</th>
                                     <th>#@item.ID</th>
-                                    <td>@item.Employee.Code</td>
-                                    <td>@item.Room</td>
+                                    <td>@item.Employee_ID</td>
+                                    <td>@item.Room.Name</td>
                                     <td>@(string.Format("{0:HH:mm}", item.TimeIn))</td>
                                     <td>@(string.Format("{0:HH:mm}", item.TimeOut))</td>
                                     <td>@(string.Format("{0:#,##0}", item.Ticket.Price))</td>
