--- a/WebApp/Areas/Admin/Views/DailyList/TaxiIndex.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/TaxiIndex.cshtml
@@ -25,11 +25,10 @@
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" placeholder="Nhập vào ID bảng kê hoặc SĐT" name="searchString" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/DailyList/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
