--- a/WebApp/Areas/Admin/Views/Employee/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Create.cshtml
@@ -72,7 +72,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control", placeholder = "Mã nhân viên bắt đầu bởi ký tự NV hoặc KTV (ví dụ: KTV1001)" } })
                 @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
             </div>
         </div>
