--- a/WebApp/Areas/Admin/Views/Customer/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Customer/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model PagedList.IPagedList<Model.EF.DayOff>
-@using PagedList.Mvc;
+﻿@model PagedList.IPagedList<Model.EF.Customer>
+@using PagedList.Mvc
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 
 @section header{
-    Danh sách xin nghỉ
+    Khách hàng
 }
 
 <div class="row">
@@ -15,21 +15,21 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách xin nghỉ
+                Danh sách khách hàng
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "DayOff", FormMethod.Get))
+                @using (Html.BeginForm("Index", "Customer", FormMethod.Get))
                 {
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào mã Nhân viên hoặc Ngày: yyyy-mm-dd" />
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào Tên hoặc SĐT" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/DayOff/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/Customer/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
@@ -39,10 +39,11 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Ngày</th>
-                                <td>Mã nhân viên</td>
-                                <td>Lý do</td>
-                                <td>Trạng thái</td>
+                                <th>ID</th>
+                                <th>Tên</th>
+                                <td>CMND</td>
+                                <td>SĐT</td>
+                                <td>Ghi chú</td>
                                 <td>Tạo bởi</td>
                             </tr>
                         </thead>
@@ -50,13 +51,14 @@
                             @foreach (var item in Model)
                             {
                             <tr id="row_@item.ID">
-                                <th>@(string.Format("{0:dd/MM/yyyy}", item.Date))</th>
-                                <td>@item.Employee.Code</td>
+                                <th>#@item.ID</th>
+                                <td>@item.Name</td>
+                                <td>@item.CardID</td>
+                                <td>@item.Phone</td>
                                 <td>@item.Description</td>
-                                <td>@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Chờ xác nhận</strong>")</td>
                                 <td>@item.CreatedBy</td>
                                 <td>
-                                    <a href="/Admin/DayOff/Edit/@item.ID">Sửa</a>
+                                    <a href="/Admin/Customer/Edit/@item.ID">Sửa</a>
                                     |
                                     @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                {
@@ -79,4 +81,3 @@
         </div>
     </div>
 </div>
-<p>
