--- a/WebApp/Areas/Admin/Views/DailyList/CodeIndex.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/CodeIndex.cshtml
@@ -26,7 +26,7 @@
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào Code" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
@@ -62,8 +62,6 @@
                                 <td>@item.CreatedBy</td>
 
                                 <td>
-                                    <a href="/Admin/DailyList/CodeEdit/@item.ID">Sửa</a>
-                                    |
                                     @Ajax.ActionLink("Xoá", "CodeDelete", new { @id = item.ID }, new AjaxOptions
                                {
                                    Confirm = "Bạn có muốn xoá bản ghi này?",
