--- a/WebApp/Areas/Admin/Views/Room/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Room/Index.cshtml
@@ -1,13 +1,11 @@
-﻿@model PagedList.IPagedList<Model.EF.ViolatorKTV>
+﻿@model PagedList.IPagedList<Model.EF.Room>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 
-@section header{
-    Danh sách vi phạm/tạm ứng
-}
+<h2>Danh sách vé</h2>
 
 <div class="row">
 
@@ -15,52 +13,49 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách vi phạm/tạm ứng
+                Danh sách vé
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "ViolatorKTV", FormMethod.Get))
+                @using (Html.BeginForm("Index", "Room", FormMethod.Get))
                 {
+
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" placeholder="Nhập vào số ID hoặc mã Nhân viên " name="searchString" />
+                                @*<input type="text" id="txtsearch" class="form-control" placeholder="Nhập vào mã KTV" />*@
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào Tên vé hoặc Giá" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/ViolatorKTV/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/Room/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
                 }
-
+                <hr />
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
+                                <th>Chi nhánh</th>
                                 <th>ID</th>
-                                <td>Ngày giờ</td>
-                                <th>Mã nhân viên</th>
-                                <td>Tua</td>
-                                <td>Trái cây</td>
-                                <td>Thế chân</td>
-                                <td>Ghi chú</td>
+                                <td>Tên phòng</td>
+                                <td>Chi tiết</td>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
                                 <tr id="row_@item.ID">
+
+                                    <th>@item.Department.Name</th>
                                     <th>#@item.ID</th>
-                                    <td>@item.CreatedDate</td>
-                                    <td>@item.Employee.Code</td>
-                                    <td>@(string.Format("{0:#,##0}", item.Tour))</td>
-                                    <td>@(string.Format("{0:#,##0}", item.Fruit))</td>
-                                    <td>@(string.Format("{0:#,##0}", item.Substitution))</td>
+                                    <td>@item.Name</td>
                                     <td>@item.Description</td>
                                     <td>
-                                        <a href="/Admin/ViolatorKTV/Edit/@item.ID">Sửa</a>
+                                        <a href="/Admin/Room/Edit/@item.ID">Sửa</a>
                                         |
                                         @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                    {
