--- a/WebApp/Areas/Admin/Views/Violator/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Violator/Index.cshtml
@@ -25,7 +25,7 @@
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" placeholder="Nhập vào số ID hoặc mã Nhân viên" name="searchString" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
