--- a/WebApp/Areas/Admin/Views/DailyList/CodeDetail.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/CodeDetail.cshtml
@@ -13,7 +13,7 @@
     <dl class="dl-horizontal">
         <h2>
             <dt>
-                @Html.DisplayNameFor(model => model.Code)
+                Code
             </dt>
 
             <dd>
@@ -25,7 +25,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DiscountPercent)
+            @Html.DisplayFor(model => model.DiscountPercent)%
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ExpirationDate)
