--- a/WebApp/Areas/Admin/Views/DayOff/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/DayOff/Edit.cshtml
@@ -34,7 +34,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>DayOff</h4>
+        <h4><b>#@Html.DisplayFor(model => model.ID)</b></h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -68,10 +68,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Status)
-                    @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-                </div>
+                @Html.CheckBoxFor(model => model.Status, new { @class = "form-check-input position-static" })
+                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
 
