--- a/WebApp/Areas/Admin/Views/Login/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Login/Index.cshtml
@@ -33,35 +33,33 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Sign In</h3>
-                    </div>
-                    <div class="panel-body">
-                        @using (Html.BeginForm("Login", "Login", FormMethod.Post))
-                        {
-                            @Html.ValidationSummary(false, "", new { @class = "text-danger" });
-                            <fieldset>
-                                <div class="form-group">
-                                    @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", @autofocus = "autofocus" })
-                                </div>
-                                <div class="form-group">
-                                    @Html.PasswordFor(model => model.PassWord, new { @class = "form-control" })
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        @Html.CheckBoxFor(model => model.RememberMe)Remember Me
-                                    </label>
-                                </div>
-                                <!-- Change this to a button or input when using this as a form -->
-                                <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
-                            </fieldset>
-                        }
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="login-panel panel panel-default">
+                        <div class="row" style="text-align:center">
+                            <img src="~/Areas/Admin/Data/System/logo.png" />
+                        </div>
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Đăng nhập</h3>
+                        </div>
+                        <div class="panel-body">
+                            @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+                            {
+                                @Html.ValidationSummary(false, "", new { @class = "text-danger" });
+                                <fieldset>
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", @autofocus = "autofocus" })
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.PasswordFor(model => model.PassWord, new { @class = "form-control" })
+                                    </div>
+                                    <!-- Change this to a button or input when using this as a form -->
+                                    <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                                </fieldset>
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
     <!-- jQuery -->
     <script src="/assets/admin/bower_components/jquery/dist/jquery.min.js"></script>
